--- a/counter-app/service/db/catalog-info.yaml
+++ b/counter-app/service/db/catalog-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Resource
 metadata:
-  name: counter-db
+  name: counter-db-mansi-test
   description: Counter service database
   tags:
     - mongodb
